--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,32 @@
 .card {
   padding: 2em;
 }
+
+.container{
+  display: flex;
+  gap: 40px;
+}
+
+.form{
+  padding: 20px;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 10px;
+
+}
+
+label{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.list-container{
+  border: 1px solid white;
+  padding: 20px;
+  border-radius: 10px;
+  max-height: 600px;
+  width: 280px;
+}
