--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,112 +1,122 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
 }
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
-.container{
-  display: flex;
-  gap: 40px;
-}
-.form-container{
- display: flex;
-
-}
-.form{
-  padding: 20px;
-  border: 1px solid white;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  border-radius: 10px;
-  align-self: center;
+.container {
+    display: flex;
+    gap: 40px;
 }
 
-.form p,.list-container p {
-  margin-top: 4px;
+.form-container {
+    display: flex;
+
 }
 
-label{
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+.form {
+    padding: 20px;
+    border: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    border-radius: 10px;
+    align-self: center;
 }
 
-.list-container{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  border: 1px solid white;
-  padding: 20px;
-  border-radius: 10px;
-  max-height: 600px;
-  min-width: 440px;
-  overflow-y: auto;
+.form p, .list-container p {
+    margin-top: 4px;
 }
 
-
-.item-container{
-  display: flex;
-  width: 100%;
-  gap: 10px;
-  justify-content: space-between;
-  align-items: center;
+label {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
-.buttons{
-  display: flex;
-  gap: 10px;
-  visibility: hidden;
-}
-
-.buttons-edit-mode{
-  display: flex;
-  gap: 10px;
-}
-
-.item-container:hover .buttons{
-  visibility: visible;
+.list-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+    border: 1px solid white;
+    padding: 20px;
+    border-radius: 10px;
+    max-height: 600px;
+    min-width: 440px;
+    overflow-y: auto;
 }
 
 
-.item-container input{
-  background: none;
-  border: 1px solid rgba(255, 255, 255, 0.37);
-  padding: 4px;
-  border-radius: 4px;
-  width: 40px;
+.item-container {
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttons {
+    display: flex;
+    gap: 10px;
+    visibility: hidden;
+}
+
+.buttons-edit-mode {
+    display: flex;
+    gap: 10px;
+}
+
+.item-container:hover .buttons {
+    visibility: visible;
+}
+
+
+.item-container input {
+    background: none;
+    border: 1px solid rgba(255, 255, 255, 0.37);
+    padding: 4px;
+    border-radius: 4px;
+    width: 40px;
+}
+
+
+.right {
+    margin-top: 20px;
+    justify-content: flex-end;
 }
